[package]
name = "ep2pc"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "compiler",
    "crypto",
    "discovery",
    "peer",
    "repo",
    "runtime",
    "settings",
    "vm"]

[dependencies.peer]
path = "peer"

[dependencies.settings]
path = "settings"

[dependencies]
env_logger = "0.11.2"

[dev-dependencies]
cargo-husky = "1"
