[package]
name = "ep2pc"
version = "0.1.0"
edition = "2021"
authors = ["Maxim Tugunchinov <tugunchinov.maxim@gmail.com>"]
description = "TODO"

[workspace]
members = [
    "discovery",
    "network",
    "peer",
    "repo",
    "result",
    "settings",
    "vm"
]

[dependencies.discovery]
path = "discovery"

[dependencies.peer]
path = "peer"

[dependencies.settings]
path = "settings"

[dependencies]
env_logger = "0.11.2"

[dev-dependencies.cargo-husky]
version = "1.5.0"
features = ["run-cargo-fmt", "run-cargo-clippy"]
