[package]
name = "peer"
version = "0.1.0"
edition = "2021"
authors = ["Maxim Tugunchinov <tugunchinov.maxim@gmail.com>"]
description = "TODO"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.discovery]
path = "../discovery"

[dependencies.network]
path = "../network"

[dependencies.settings]
path = "../settings"

[dependencies]
log = "0.4.20"
